--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,8 @@ jobs:
         with:
           # The root LaTeX file to be compiled
           root_file: main.tex
+      - name: GH Release
+        uses: softprops/action-gh-release@v0.1.14
+        with:
+          files: main.pdf
+
